# R-seau-Prog-Bas-Niveau-

C/: CMakeLists.txt
C/TD1/: a.out  fgets.c  palindrome.c  pointeur  pointeur.c  simple.c  structure.c  tailleTab.c
C/TD2/: Matrices.c  Minmax.c  a.out  tabDynamique.c
C/TD3/: Copy of lireligne.c  a.out  bigfich.c  copy.c  lireligne.c  readfile.c
C/TD4/: a.out  image.ppm  intensite.c  mono.c  negative.c
TD1/: palindrome.c  simple  simple.c
TD2/: Matrice  Matrice.c  a.out  maximum.c
